Trying to fix logo on iOS

--- a/css/index.css
+++ b/css/index.css
@@ -273,6 +273,9 @@ header#masthead .container {
 }
 
 /* Logo */
+.logo-container {
+  display: inline-block;
+}
 .logo {
   font-family: var(--font-heading);
   color: var(--font-accent);
